WIP DTOs und klare Trennung von UI und BL